--- a/index.html
+++ b/index.html
@@ -25,5 +25,97 @@
       </div>
     </div>
   </header>
+
+  <nav id="nav">
+    <div class="nav1">
+      <div class="title">
+        <a href="#"><img src="./images/logo2.png" alt=""></a>
+        <h1>和平精英<span>全球玩家的竞技冒险世界</span></h1>
+      </div>
+      <ul>
+        <li><a href="#" target="_blank">官网首页</a></li>
+				<li><a href="#" target="_blank">版本专区</a></li>
+				<li><a href="#" target="_blank">游戏资料</a></li>
+				<li><a href="#" target="_blank">赛事专区</a></li>
+				<li><a href="#" target="_blank">安全中心</a></li>
+				<li><a href="#" target="_blank">自助工具</a></li>
+				<li><a href="#" target="_blank">社区论坛</a></li>
+				<li><a href="#" target="_blank">下载游戏</a></li>
+      </ul>
+      <div class="login">
+        <span></span>
+        <p>特种兵，请<span>登录</span></p>
+      </div>
+    </div>
+    <div class="nav2">
+      <ul>
+				<li>
+					<ul>
+						<li class="new"><a href="#" target="_blank">最新版本</a></li>
+						<li class="new"><a href="#" target="_blank">最新赛季</a></li>
+						<li><a href="#" target="_blank">版本中心</a></li>
+						<li><a href="#" target="_blank">体验服</a></li>
+						<li class="new"><a href="#" target="_blank">皮肤宝库</a></li>
+						<li class="new"><a href="#" target="_blank">绿洲启元</a></li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><a href="#" target="_blank">新闻资讯</a></li>
+						<li><a href="#" target="_blank">攻略中心</a></li>
+						<li><a href="#" target="_blank">视频中心</a></li>
+						<li class="hot"><a href="#" target="_blank">武器库</a></li>
+						<li class="hot"><a href="#" target="_blank">大神灵敏度</a></li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><a href="#" target="_blank">赛事中心</a></li>
+						<li><a href="#" target="_blank">PEN赛事</a></li>
+						<li><a href="#" target="_blank">娱乐综艺</a></li>
+						<li class="hot"><a href="#" target="_blank">大众赛</a></li>
+						<li class="hot"><a href="#" target="_blank">巅峰赛</a></li>
+						<li class="hot"><a href="#" target="_blank">授权赛</a></li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li class="hot"><a href="#" target="_blank">安全反外挂站</a></li>
+						<li><a href="#" target="_blank">视频巡查</a></li>
+						<li><a href="#" target="_blank">成长守护平台</a></li>
+						<li><a href="#" target="_blank">腾讯游戏防沉迷</a></li>
+					</ul>
+				</li>
+				<li>
+					<ul>
+						<li><a href="#" target="_blank">CDK兑换</a></li>
+						<li><a href="#" target="_blank">客服专区</a></li>
+						<li class="hot"><a href="#" target="_blank">举报查询</a></li>
+						<li><a href="#" target="_blank">作者入驻</a></li>
+					</ul>
+				</li>
+				<li>
+					<ul class="contact">
+						<li>
+							<a href="javascript:;">官方公众号</a>
+							<span><img src="images/code1.png" alt=""></span>
+						</li>
+						<li>
+							<a href="javascript:;">微信用户社区</a>
+							<span><img src="images/code2.png" alt=""></span>
+						</li>
+						<li>
+							<a href="javascript:;">QQ用户社区</a>
+							<span><img src="images/code3.png" alt=""></span>
+						</li>
+						<li>
+							<a href="javascript:;">官方微博</a>
+							<span><img src="images/code4.png" alt=""></span>
+						</li>
+					</ul>
+				</li>
+      </ul>
+    </div>
+  </nav>
 </body>
 </html>
