--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <title>和平精英官网</title>
   <link rel="stylesheet" href="./css/index.css">
-</head>
+</head>·
 <body>
   <header id="top">
     <div class="container">
@@ -117,5 +117,17 @@
       </ul>
     </div>
   </nav>
+
+  <!-- 登录弹窗 -->
+  <div id="loginBox" class="dialog">
+    <div class="wrap">
+      <h3>登录</h3>
+      <div class="btn">
+        <a href="#" target="_blank">QQ登录</a>
+        <a href="#" target="_blank">微信登录</a>
+      </div>
+      <button class="close"></button>
+    </div>
+  </div>
 </body>
 </html>
