--- a/index.html
+++ b/index.html
@@ -129,5 +129,57 @@
       <button class="close"></button>
     </div>
   </div>
+
+  <!-- bg1,banner-->
+  <div id="bg1"></div>
+  <div id="banner">
+    <div class="container">
+      <button class="tip">适龄提示</button>
+      <div class="top">
+        <div class="down">
+          <h3>扫码下载游戏</h3>
+					<a href="#" target="_blank">苹果下载</a>
+					<a href="#" target="_blank">安卓下载</a>
+					<img src="images/downqrcode.jpg" alt="">
+        </div>
+        <div class="carousel">
+          <ul class="carouselInner">
+						<li><a href="#"><img src="images/pic_01.jpeg" alt=""></a></li>
+						<li><a href="#"><img src="images/pic_02.jpeg" alt=""></a></li>
+					</ul>
+          <div class="carouselIndicators">
+						<span class="active"></span><span></span>
+					</div>
+        </div>
+        <div class="news">
+          <ul class="tab">
+						<li class="active">最新</li>
+						<li>新闻</li>
+						<li>公告</li>
+						<li>活动</li>
+						<li>赛事</li>
+						<li class="more"><a href="#" target="_blank"></a></li>
+					</ul>
+          <ul class="tabContent active">
+						<li><a href="#" target="_blank">光之精英，夏日派对，上快手投稿赢万元现金投稿赢万元现金</a></li>
+						<li><span>[活动]</span><a href="#" target="_blank">光之精英，夏日派对，上快手投稿赢万元现金投</a><i>08-04</i></li>
+						<li><span>[活动]</span><a href="#" target="_blank">光之精英，夏日派对，上快手投稿赢万元现金投</a><i>08-04</i></li>
+						<li><span>[活动]</span><a href="#" target="_blank">光之精英，夏日派对，上快手投稿赢万元现金投</a><i>08-04</i></li>
+						<li><span>[活动]</span><a href="#" target="_blank">光之精英，夏日派对，上快手投稿赢万元现金投</a><i>08-04</i></li>
+						<li><span>[活动]</span><a href="#" target="_blank">光之精英，夏日派对，上快手投稿赢万元现金投</a><i>08-04</i></li>
+					</ul>
+					<ul class="tabContent">
+					</ul>
+					<ul class="tabContent">
+					</ul>
+					<ul class="tabContent">
+					</ul>
+					<ul class="tabContent">
+					</ul>
+        </div>
+      </div>
+      <div class="bottom"></div>
+    </div>
+  </div>
 </body>
 </html>
